# pretix-easyverein

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_easyverein/: apps.py  ev_utils.py  forms.py  signals.py  tasks.py  urls.py  views.py
pretix_easyverein/locale/de/LC_MESSAGES/: django.po
pretix_easyverein/templates/pretix_easyverein/: organizer_easyverein.html
