[project]
name = "pretix-easyverein"
dynamic = ["version"]
description = "Connects pretix with easyverein"
readme = "README.rst"
license = "Apache-2.0"
keywords = ["pretix"]
authors = [
    {name = "Julian Hammer", email = "julian.hammer@betreiberverein.de"},
]
maintainers = [
    {name = "Julian Hammer", email = "julian.hammer@betreiberverein.de"},
]

dependencies = [
    "python-easyverein"
]

[project.entry-points."pretix.plugin"]
pretix_easyverein = "pretix_easyverein:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/zam-haus/pretix-easyverein"
repository = "https://github.com/zam-haus/pretix-easyverein"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_easyverein.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
